force-app/main/default/objects/Internship_Application__c/Internship_Application__c.object-meta.xml
<CustomObject>
    <label>Internship Application</label>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>Internship Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internship Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>