force-app/main/default/objects/Internship_Application__c/fields/CandEmail__c.field-meta.xml
<CustomField>
    <fullName>CandEmail__c</fullName>
    <defaultValue>$User.Email</defaultValue>
    <externalId>true</externalId>
    <label>CandEmail</label>
    <type>Email</type>
</CustomField>