force-app/main/default/objects/Internship_Application__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Internship Applications</relationshipLabel>
    <relationshipName>Internship_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>