force-app/main/default/objects/Internship_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Personal Interview</fullName>
                <isActive>false</isActive>
                <label>Personal Interview</label>
            </value>
            <value>
                <fullName>Review Resume</fullName>
                <isActive>false</isActive>
                <label>Review Resume</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>